--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,8 +1,12 @@
 {
     "continue_button_label": "Continue",
+
     "login_button_label": "Login",
     "go_to_login_page_button_label": "I've already had an account",
-    "login_error_message": "Wrong email or password",
+    "login_error_title": "Login failed!",
+    "login_error_description": "Incorrect e-mail address or password",
+    "login_success_message": "You are being redirected to the home screen...",
+
     "forgotten_password_message": "Forgotten password?",
     "forgotten_password_title": "Forgotten password",
     "forgotten_password_button_label": "Reset password",
@@ -10,6 +14,11 @@
     "forgotten_password_email_sended_message": "Please check your inbox for password reset instructions.",
     "forgotten_password_desc": "Enter your email and we will send you a password reset link",
     "forgotten_password_email_not_found": "Email Not founded!",
+    
+    "forgotten_password_error_page_description": "We did not find an account linked to this email address in our database",
+    "email_page_loading_title": "Checking your email...",
+
+
     "start_button_label": "Get Started",
     "register_user_button_label": "Register user",
     "try_again": "Try again",
