--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,7 +4,8 @@
     "login_button_label": "Login",
     "go_to_login_page_button_label": "I've already had an account",
     "login_error_title": "Login failed!",
-    "login_error_description": "Incorrect e-mail address or password",
+    "login_error_description": "Unable to login! Incorrect e-mail address or password.",
+    "login_email_pattern_error_description": "Incorrect e-mail format!",
     "login_success_message": "You are being redirected to the home screen...",
 
     "forgotten_password_message": "Forgotten password?",
