feat: add l10n ref texts

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -131,6 +131,14 @@
     "dashboard_cheapest_item": "Cheapest item out of stock:",
     "dashboard_total_price": "Total Price of Products:",
     "history_title": "Order History",
-    "history_loud_orders": "Load more..."
+    "history_loud_orders": "Load more...",
 
+    "simulate_order_page_title": "Simulate order",
+    "simulate_order_page_error_description": "It's not possible to create orders now. Click here to try again or contact the support team.",
+    "simulate_order_available_products_title": "Available products",
+    "simulate_order_selected_products_title": "Selected products",
+    "simulate_order_finish_order_button_title": "Finish order",
+    "simulate_order_create_order_loading_title": "Creating order...",
+    "simulate_order_create_order_success_title": "Order created!",
+    "simulate_order_create_order_error_description": "Something went wrong. We couldn't create your order, try again or contact our support team."
 }
