--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -42,6 +42,7 @@
     "settings_name_option_title": "Nome",
     "settings_phone_option_title": "Telefone",
     "settings_email_option_title": "E-mail",
+    "settings_signout_option_title": "Deslogar",
 
     "name_page_title": "Nome da Loja",
     "name_page_description": "Modifique o nome da loja que seus clientes irão enxergar durante as compras.\nSeu nome deve seguir algumas <bold>regras:\n• Não pode começar com números\n• Deve ter ao máximo 25 caracteres</bold>",
