--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -104,6 +104,7 @@
     "on_boarding_password_page_error_page_description": "Password cannot be empty.",
     "on_boarding_password_page_success_title": "Password Successfully Set!",
     "on_boarding_password_page_loading_title": "Setting password...",
+    "on_boarding_success_account_creation_title": "Account created!",
    
     "on_boarding_initial_title": "Welcome to Grabber",
     "on_boarding_description_title": "For your first interaction with our product, we need you to complete the initial setup to link it with the Garra system.\n\nOn behalf of the Grabber team, we thank you for choosing us.",
