feat: add l10n ref text

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -145,6 +145,9 @@
     "add_item_position_option_label": "Position",
     "add_item_name_option_label": "Name",
     "add_item_amount_option_label": "Amount",
+    "add_item_price_option_label": "Price",
+    "add_item_size_option_label": "Size",
+    "add_item_weight_option_label": "Weight in kg",
     "add_item_description_option_label": "Description",
     "add_item_button_label": "Adicionar",
     "add_item_success_title": "Item created!",
@@ -154,6 +157,9 @@
     "product_name_cannot_be_empty_error_text": "Name cannot be empty",
     "product_amount_cannot_be_empty_error_text": "Amount cannot be empty",
     "product_description_cannot_be_empty_error_text": "Description cannot be empty",
+    "product_weight_cannot_be_empty_error_text": "Weight cannot be empty",
+    "product_size_cannot_be_empty_error_text": "Size cannot be empty",
+    "product_price_cannot_be_empty_error_text": "Price cannot be empty",
 
     "edit_item_page_title": "Edit item",
     "edit_item_loading_title": "Editing item",
