--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -143,6 +143,9 @@
     "add_item_position_option_label": "Posição",
     "add_item_name_option_label": "Nome",
     "add_item_amount_option_label": "Quantidade",
+    "add_item_price_option_label": "Price",
+    "add_item_size_option_label": "Tamanho",
+    "add_item_weight_option_label": "Peso em kg",
     "add_item_description_option_label": "Descrição",
     "add_item_button_label": "Adicionar",
     "add_item_success_title": "Item criado!",
@@ -152,6 +155,9 @@
     "product_name_cannot_be_empty_error_text": "Nome não pode ser vazio",
     "product_amount_cannot_be_empty_error_text": "Quantidade não pode ser vazia",
     "product_description_cannot_be_empty_error_text": "Descrição não pode ser vazia",
+    "product_weight_cannot_be_empty_error_text": "Peso não pode ser vazio",
+    "product_size_cannot_be_empty_error_text": "Tamanho não pode ser vazio",
+    "product_price_cannot_be_empty_error_text": "Preço não pode ser vazio",
 
     "edit_item_page_title": "Editar item",
     "edit_item_loading_title": "Editando item",
