refac: change ip connection

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -45,6 +45,7 @@
     "settings_phone_option_title": "Phone",
     "settings_address_option_title": "Address",
     "settings_signout_option_title": "Sign out",
+    "settings_connection_option_title": "IP connection",
 
     "settings_email_option_title": "Email",
 
