--- a/lib/l10n/intl_pt_BR.arb
+++ b/lib/l10n/intl_pt_BR.arb
@@ -218,5 +218,7 @@
     "simulate_order_finish_order_button_title": "Finalizar pedido",
     "simulate_order_create_order_loading_title": "Criando pedido...",
     "simulate_order_create_order_success_title": "Pedido criado!",
-    "simulate_order_create_order_error_description": "Algo deu errado. Não conseguimos criar o pedido, tente novament ou entre em contato com a equipe de suporte."
+    "simulate_order_create_order_error_description": "Algo deu errado. Não conseguimos criar o pedido, tente novament ou entre em contato com a equipe de suporte.",
+
+    "ip_connection_label": "Endereço de IP"
 }
